tests/resolver/error/pattern_dup.nk
type Kek =
    | Lel Int Kek
    | Lil Int

let a =
    match a with
        Kek.Lel a (Kek.Lil a) => 2
        b => 3